AM_CFLAGS=-I../include/gtypes
AM_CXXFLAGS=-I../include/gtypes
noinst_LTLIBRARIES = libgtypes_src.la
#libgtypes_src_la_configdir = $(libdir)/gtypes/include
#libgtypes_src_la_config_DATA = config.h
libgtypes_src_la_SOURCES =  \
CatmullRomSpline2.cpp  CatmullRomSpline3.cpp  LinkedLERP3.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Rectangle.cpp	Vector2.cpp  Vector3.cpp  Vector4.cpp



